<resources>
    <!--Calculator's buttons texts-->
    <string name="app_name">Calculator</string>
    <string name="clear_button_text">C</string>
    <string name="percent_button_text">%</string>
    <string name="square_root_button_text">&#8730;</string>
    <string name="divide_button_text">/</string>
    <string name="seven_button_text">7</string>
    <string name="eight_button_text">8</string>
    <string name="nine_button_text">9</string>
    <string name="multiply_button_text">×</string>
    <string name="four_button_text">4</string>
    <string name="five_button_text">5</string>
    <string name="six_button_text">6</string>
    <string name="minus_button_text">-</string>
    <string name="one_button_text">1</string>
    <string name="two_button_text">2</string>
    <string name="three_button_text">3</string>
    <string name="plus_button_text">+</string>
    <string name="positive_negative_sign_button_text">⁺/-</string>
    <string name="zero_button_text">0</string>
    <string name="decimal_button_text">.</string>
    <string name="equal_button_text">=</string>
    <string name="open_parenthesis_button">(</string>
    <string name="close_parenthesis_button">)</string>
    <string name="log_button">log</string>
    <string name="factorial_button">!</string>
    <string name="invalid_message">Not valid operation, check your equation</string>
</resources>